--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	</div>
 </div>
 
-<iframe src="yt.php" border="0" frameborder="0" height="80"></iframe>
+<!--<iframe src="yt.php" border="0" frameborder="0" height="80"></iframe>-->
 
 
 <script>
