--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 	}
 
 	function loadVideobyUrl(vidURL) {
-		var vidURL = vidURL + "?version=3";
+		var vidURL += "?version=3";
 		player = new YT.player('player', {
 			height: '390',
 			width: '640',
