--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="/scripts/nouislider.min.js"></script>
+	<script src="./scripts/nouislider.min.js"></script>
+	<script src="./scripts/index.js"></script>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<title>Youtube Video Pitch Shifter</title>
 </head>
@@ -57,35 +58,11 @@
 					<td>Desired Key:</td>
 					<td><button id="calculatorButton" onclick="calcSemitone()">Calculate</button></td></tr>
 					<tr><td><select id="origKey">
-						<option value="-1">--</option>
-						<option value="0">C</option>
-						<option value="1">C#/Eb</option>
-						<option value="2">D</option>
-						<option value="3">D#/Eb</option>
-						<option value="4">E</option>
-						<option value="5">F</option>
-						<option value="6">F#/Gb</option>
-						<option value="7">G</option>
-						<option value="8">G#/Ab</option>
-						<option value="9">A</option>
-						<option value="10">A#/Bb</option>
-						<option value="11">B</option>
+					<!--options will go here-->
 					</select>
 					</td>
 					<td><select id="desKey">
-						<option value="-1">--</option>
-						<option value="0">C</option>
-						<option value="1">C#/Eb</option>
-						<option value="2">D</option>
-						<option value="3">D#/Eb</option>
-						<option value="4">E</option>
-						<option value="5">F</option>
-						<option value="6">F#/Gb</option>
-						<option value="7">G</option>
-						<option value="8">G#/Ab</option>
-						<option value="9">A</option>
-						<option value="10">A#/Bb</option>
-						<option value="11">B</option>
+					<!--options will go here-->
 					</select>
 					</td>
 					<td><input type="textbox" id="calcResult" size=7></td></tr>
@@ -113,8 +90,6 @@
 	<!--gets created in js-->
 	</div>
 </div>
-
-<script src="/scripts/index.js"></script>
 
 </body>
 </html>
