big changes, new library

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<table><tr><th>Semitone calculator</th></tr>
 					<tr><td>Original Key:</td>
 					<td>Desired Key:</td>
-					<td><button id="calculatorButton" onclick="calcSemitone()">Calculate</button></td></tr>
+					<td><button id="calculatorButton">Calculate</button></td></tr>
 					<tr><td><select id="origKey">
 					<!--options will go here-->
 					</select>
@@ -74,6 +74,7 @@
 		<tr>	
 			<td>
 				audio controls will go here
+				<pre id="log"></pre>
 			</td>
 			<td><div id="player">
 				<!--iframe and player will replace this div.-->
